# snippet-war

./: .env  .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  go.mod
.cursor/plans/: llm_integration_roadmap_2b7365cf.plan.md
.cursor/rules/: go-file.mdc  python-files.mdc  running-python.mdc
.github/workflows/: deploy-backend.yml  deploy.yml
backend/content-service/: .env.example  Dockerfile  README.md  pyproject.toml
backend/migrations/: 000001_create_questions_table.down.sql  000001_create_questions_table.up.sql  000002_create_users_table.down.sql  000002_create_users_table.up.sql  000003_create_user_questions_table.down.sql  000003_create_user_questions_table.up.sql  000004_add_likes_to_questions.down.sql  000004_add_likes_to_questions.up.sql
backend/platform-service/: .env.example  Dockerfile  Makefile  buf.gen.yaml  go.mod  go.sum
backend/services/content-service/: .gitignore  Dockerfile  README.md  pyproject.toml
backend/services/content-service/app/: __init__.py  config.py  database.py  main.py
backend/services/content-service/app/clients/: __init__.py  proxyapi_client.py
backend/services/content-service/app/models/: db.py  enums.py  llm_response.py
backend/services/content-service/app/repositories/: question_repository.py
backend/services/content-service/app/routers/: __init__.py
cmd/snippet-war/: README.md  main.go
cmd/test-question/: README.md  main.go
frontend/: index.html
internal/config/: config_test.go
internal/model/: llm_response.go  question.go  question_request_test.go  question_test.go  (+2 more)
todo/: llm.md
(+74 files in other folders)
